[metadata]
name = zenomix
version = attr: zenomix.__version__
#url = 
author = Yasushi Okochi
author_email = shisuya-0112-oko@outlook.jp
license_files = LICENSE
description = zenomix: zero-shot reconstruction of mutant spatial transcriptomes
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires =
    jax==0.3.25
    jaxlib==0.3.25
    matplotlib==3.6.2
    numpy==1.22.4
    pandas==1.5.1
    scikit-learn==1.1.3
    scipy==1.9.3