[metadata]
name = zenomix
version = attr: zenomix.__version__
#url = 
author = Yasushi Okochi
author_email = shisuya-0112-oko@outlook.jp
license_files = LICENSE
description = zenomix: zero-shot reconstruction of mutant spatial transcriptomes
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires =
    jax
    jaxlib
    matplotlib
    numpy
    pandas
    scikit-learn
    scipy